// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthenticateButton logged in 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-colorInherit MuiButton-flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Logout
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots AuthenticateButton not logged in 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-colorInherit MuiButton-flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Login
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
